Use URIs instead of URLs
URL constructor is deprecated